--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 .main {
   background-color: #89cff0;
   width: 70%;
-  height: 80%;
+  height: 90%;
   border-radius: 7%;
   display: flex;
   flex-direction: column;
@@ -96,11 +96,11 @@ body {
   margin-top: 30px;
   display: flex;
   align-items: center;
-  
+  gap: 10px;
 }
 
 #tag-total-1{
-  width: 100px;
+  width: 120px;
   height: 25px;
   background: rgb(225 6 0);
   border-radius: 10px;
@@ -118,7 +118,7 @@ body {
 }
 
 #tag-total-3{
-   width: 100px;
+   width: 120px;
   height: 25px;
   background: rgb(28, 198, 12);
   border-radius: 10px;
@@ -146,7 +146,7 @@ body {
 @media (max-width: 768px) {
   .main {
     width: 90%;
-    height: 80%;
+    height: 70%;
   }
   #title {
     font-size: 12px;
